examples/good/13-05-type-checking-function-not-declated.hp
def filter :: [Int] -> (Int -> Bool) -> [Int] l =
  if empty l then
    []
  else
    let def h :: Int = head l
    in
      if fun h then
        h:filter (tail l) fun
      else
        filter (tail l) fun;
