examples/bad/13-02-type-checking-function-definitions.hp
def fun :: [Int] -> Int -> Int l = head l;
